--- a/src/Components/Hero/hero.module.css
+++ b/src/Components/Hero/hero.module.css
@@ -1,7 +1,10 @@
 .hero {
-  background-image: linear-gradient(rgba(000, 0.6), rgba(000, 0.6)),
-    url(../../assets/images/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.541), rgba(0, 0, 0, 0.137)),
+    url("../../assets/images/hero.jpg");
   background-position: center;
   background-size: cover;
-  height: 80vh;
+  height: 75vh;
+}
+
+.hero__container {
 }
