--- a/src/Components/Hero/hero.module.css
+++ b/src/Components/Hero/hero.module.css
@@ -1,9 +1,10 @@
 .hero {
   background-image: linear-gradient(rgba(0, 0, 0, 0.541), rgba(0, 0, 0, 0.137)),
-    url("../../assets/images/hero.jpg");
+    url("../../assets/images/netflix.jpg");
   background-position: center;
   background-size: cover;
-  height: 75vh;
+  height: 85vh;
+  margin-bottom: 5rem;
 }
 
 .hero__container {
