--- a/src/Components/Featured/featured.module.css
+++ b/src/Components/Featured/featured.module.css
@@ -43,22 +43,20 @@
   width: 100%;
   height: 250px;
   transition: all 0.3s ease;
+  opacity: 0.7;
 }
 
 .image:hover {
-  /* transform: scale(0.98); */
+  opacity: 1;
+  transform: scale(0.95);
 }
 
-.link {
-  position: absolute;
-  top: 0;
-  left: 0;
+.heading_box {
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
 }
 
-.search {
-  color: #fff;
-  font-size: 2.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.heading {
+  font-weight: 400;
+  color: #f7f7f7;
 }
