--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@ body {
   background: #222;
   color: #f7f7f7;
 }
+
+/* Single Movie Page CSS */
+
+.signle-movie__container {
+  display: flex;
+  justify-content: center;
+  padding: 100px;
+}
+
+.single-movie__info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2rem;
+}
+
+.signle-movie__title {
+  font-weight: 400;
+  font-size: 2.5rem;
+}
+
+.signle-movie__desc {
+  color: #f3f3f3;
+  margin: 1rem 0;
+}
