--- a/src/Components/Hero/hero.module.css
+++ b/src/Components/Hero/hero.module.css
@@ -5,21 +5,21 @@
   background-size: cover;
   height: 85vh;
   margin-bottom: 5rem;
+  position: relative;
 }
 
 .container {
   display: flex;
-  align-items: center;
   justify-content: space-around;
   padding-top: 2.5rem;
 }
 
 .hero_box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 18rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .hero_heading {
