--- a/src/Components/Search/search.module.css
+++ b/src/Components/Search/search.module.css
@@ -1,14 +1,27 @@
+.form {
+  position: relative;
+}
+
 .search {
   background: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.39);
+  border: 2px solid rgba(153, 153, 153, 0.705);
   width: 250px;
   height: 30px;
   outline: none;
   transition: all 0.3s ease;
-  color: #f7f7f7;
+  color: rgba(219, 219, 219, 0.705);
   font-size: 18px;
 }
 
-.search:focus {
+/* .search:focus {
   width: 350px;
+} */
+
+.icon {
+  position: absolute;
+  top: 10%;
+  right: 2%;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: rgba(153, 153, 153, 0.705);
 }
