--- a/src/Components/Search/search.module.css
+++ b/src/Components/Search/search.module.css
@@ -1,27 +1,33 @@
 .form {
-  position: relative;
+  display: flex;
 }
 
 .search {
   background: transparent;
-  border: 2px solid rgba(153, 153, 153, 0.705);
+  border: 2px solid rgba(241, 241, 241, 0.705);
   width: 250px;
   height: 30px;
   outline: none;
   transition: all 0.3s ease;
-  color: rgba(219, 219, 219, 0.705);
-  font-size: 18px;
+  color: #ffffff;
+  font-size: 16px;
+  border-radius: 70px;
+  padding: 0.5rem;
 }
 
-/* .search:focus {
-  width: 350px;
-} */
+.search:focus {
+  width: 300px;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
 
 .icon {
-  position: absolute;
-  top: 10%;
-  right: 2%;
-  font-size: 1.5rem;
+  /* position: absolute; */
+  font-size: 1rem;
   cursor: pointer;
-  color: rgba(153, 153, 153, 0.705);
+  color: #ffffff;
 }
