--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
 .single-movie__info {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   margin-left: 2rem;
 }
 
@@ -34,4 +35,20 @@ body {
 .signle-movie__desc {
   color: #f3f3f3;
   margin: 1rem 0;
+}
+
+.signle-movie__genres {
+  display: flex;
+  justify-content: space-around;
+}
+.signle-movie__genre {
+  background-color: #53c213;
+  padding: 0.2rem;
+  margin-right: 0.2rem;
+}
+
+@media screen and (max-width: 800px) {
+  .signle-movie__container {
+    flex-direction: column;
+  }
 }
