--- a/src/Components/Hero/hero.module.css
+++ b/src/Components/Hero/hero.module.css
@@ -17,11 +17,11 @@
 }
 
 .hero_box {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20rem;
 }
 
 .hero_heading {
