--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ body {
   display: flex;
   justify-content: space-around;
 }
+
 .signle-movie__genre {
   background-color: #53c213;
   padding: 0.2rem;
@@ -50,5 +51,13 @@ body {
 @media screen and (max-width: 800px) {
   .signle-movie__container {
     flex-direction: column;
+  }
+
+  .single-movie__info {
+    margin-left: 0;
+  }
+
+  .signle-movie__poster {
+    margin-bottom: 50px;
   }
 }
